<resources>
    <string name="app_name">Blog App</string>
    <string name="str_home">Home</string>
    <string name="str_users">Users</string>
    <string name="str_favourites">Favourites</string>
    <string name="str_addblog">Add Blog</string>
    <string name="str_uploadBlog">ADD BLOG</string>
    <string name="str_chatList">ChatList</string>
    <string name="str_profile">Profile</string>
    <string name="str_settings">Settings</string>
    <string name="str_blogtitle">Enter Blog Title</string>
    <string name="str_blogdescription">Enter Blog Description</string>
    <string name="str_nameoftheplace">Enter Name of the Place</string>
    <string name="str_noblog">Oh! It think that you have no blog,please add some blog</string>
    <string name="str_nofavouriteblog">Oh! It think that you have not added any blogs to favourite</string>
    <string name="str_FavouriteTitle">Delete</string>
    <string name="str_deletefavouriteiconAlert">Are you sure you want to remove the blog from favourite</string>
    <string name="str_LocationTitle">Location is Disabled</string>
    <string name="str_LocationMessage">Are you sure you want to enable the location ?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_title">Please Enter Title</string>
    <string name="str_description">Please Enter The Description</string>
    <string name="str_place">Please Enter The Place</string>
    <string name="str_blogsuccessfull">Details Added Successfully</string>
    <string name="str_addBlogToFavourite">Blog Added To Favourites</string>
    <string name="str_removeFromFavourites">Blog removed from favourite successfully</string>
    <string name="str_notifyPlaces">Places on which you can create a blog on it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>