<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


   <item
       android:id="@+id/nav_home"
       android:icon="@drawable/ic_baseline_home_24"
       android:title="@string/str_home"/>

    <item
        android:id="@+id/nav_addblog"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/str_addblog"/>

    <item
        android:id="@+id/nav_addfaourited"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/str_favourites"/>

   <!-- <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="@string/str_settings"/>-->




    <!-- <item
         android:id="@+id/nav_chatlist"
         android:icon="@drawable/ic_baseline_chat_24"
         android:title="@string/str_chatList" />


     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_baseline_account_circle_24"
         android:title="@string/str_profile" />
 -->

</menu>